logs/job_1065.err
  File "/home/ihubnvidia20/vqe.py", line 91
    log_filename = "energy_log.txt"
                                   ^
IndentationError: unindent does not match any outer indentation level
